# SecondMind

./: .env.example  .env.test  .firebaserc  .gitattributes  .gitignore  .mcp.json  .prettierignore  CLAUDE.md  README.md  capacitor.config.ts  eslint.config.js  firebase.json  firestore.indexes.json  firestore.rules  firestore.rules.test.ts  i18next.config.ts  index.html  package-lock.json  package.json  tsconfig.app.json  tsconfig.e2e.json  tsconfig.node.json  vite.config.ts  vitest.functions.config.ts  vitest.rules.config.ts
.claude/: context-seed.md  design-principles.md  launch.json  settings.json
Docs/: 00-fundamentos-segundo-cerebro.md  01-arquitectura-hibrida-progresiva.md  02-flujos-ux-y-pantallas.md  03-convenciones-y-patrones.md  04-clean-architecture-frontend.md  REGISTRO-2026-04-14-branding-migration.md  SETUP-WINDOWS.md
Spec/: ESTADO-ACTUAL.md  SPEC-fase-0-setup.md  SPEC-fase-0.1-toolkit.md  SPEC-fase-1-mvp.md  SPEC-fase-2-ejecucion.md  SPEC-fase-3-ai-pipeline.md  SPEC-fase-3.1-ai-provider.md  SPEC-fase-4-grafo-resurfacing.md  SPEC-fase-5-pwa-extension.md  SPEC-fase-5.1-tauri-desktop.md  SPEC-fase-5.2-capacitor-mobile.md  SPEC-fase-5_2-capacitor-mobile.md  SPEC-fase-6-mcp-jarvis.md  SPEC-fase-6.1-jarvis-android.md  i18n-en-style-guide.md
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: capture.json  default.json
src-tauri/icons/: icon.icns
src-tauri/icons/android/mipmap-anydpi-v26/: ic_launcher.xml
src-tauri/icons/android/values/: ic_launcher_background.xml
src-tauri/src/: lib.rs  main.rs  oauth.rs  tray.rs  version_check.rs
(+563 files in other folders)
